Lilac: Revert recent commits to start from clean slate:
+ Revert "Lilac: Fix some bugs by restricting the creation of some `SequenceCount`s to only use fragments with a specific `readGene`."
+ Revert "Lilac: Apply quality filtering rules per gene."
+ Revert "Lilac: Fix lint raised by Google error-prone and Intellij inspections."
+ Revert "Lilac: Tweak VAF evidence filter cutoffs."
+ Revert "Lilac: VAF based filtering."