@@ -1,8 +1,8 @@
 package com.hartwig.hmftools.lilac.fragment;
 
-import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR;
+import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_NUCLEOTIDE_EVIDENCE_FACTOR;
+import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_NUCLEOTIDE_HIGH_QUAL_EVIDENCE_FACTOR;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.SortedMap;
@@ -14,24 +14,22 @@ import com.hartwig.hmftools.lilac.utils.Nucleotide;
 
 public final class NucleotideFragmentQualEnrichment
 {
-    private NucleotideFragmentQualEnrichment() {}
-
-    public static List<Fragment> qualityFilterFragments(final int minEvidenceDepth, final double minEvidenceFactor,
-            final double minHighQualEvidenceFactor, final Collection<Fragment> fragments, final Iterable<Fragment> highQualFrags)
+    public static List<Fragment> qualityFilterFragments(
+            double minEvidence, double minHighQualEvidence, final List<Fragment> fragments, final List<Fragment> highQualFrags)
     {
         // fragments are all in nucleotide-space
 
         // filter fragments so that each nucleotide has at least 1 base at or above the min-qual threshold, and
         // X fragments (minEvidence) at that base with any qual
-        SequenceCount highQualCounts = SequenceCount.nucleotides(minEvidenceDepth, minHighQualEvidenceFactor, highQualFrags);
-        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidenceDepth, minEvidenceFactor, fragments);
+        SequenceCount highQualCounts = SequenceCount.nucleotides(minHighQualEvidence, highQualFrags);
+        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidence, fragments);
 
         return fragments.stream().map(x -> applyQualityFilter(x, highQualCounts, rawCounts)).collect(Collectors.toList());
     }
 
     private static Fragment applyQualityFilter(final Fragment fragment, final SequenceCount highQualityCount, final SequenceCount rawCount)
     {
-        // checks whether all nucleotides have qual above the required level - if so return this fragment, otherwise build a
+        // checks whether all nucleotides have qual above the required level - if so return this fragment unch, otherwise build a
         // new fragment just with these filtered loci
         SortedMap<Integer, Nucleotide> nucleotidesByLoci = fragment.nucleotidesByLoci();
         boolean allPresent = true;
@@ -42,9 +40,9 @@ public final class NucleotideFragmentQualEnrichment
             Nucleotide nucleotide = entry.getValue();
             String fragmentNucleotide = entry.getValue().bases();
 
-            List<String> highQualitySequences = highQualityCount.getMinEvidenceSequences(locus, DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR);
-            List<String> rawSequences = rawCount.getMinEvidenceSequences(locus);
-            List<String> allowedSequences = highQualitySequences.stream().filter(rawSequences::contains).toList();
+            List<String> highQualitySequences = highQualityCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_NUCLEOTIDE_HIGH_QUAL_EVIDENCE_FACTOR);
+            List<String> rawSequences = rawCount.getMinCountOrVafSequences(locus, DEFAULT_MIN_NUCLEOTIDE_EVIDENCE_FACTOR);
+            List<String> allowedSequences = highQualitySequences.stream().filter(x -> rawSequences.contains(x)).collect(Collectors.toList());
 
             if(allowedSequences.contains(fragmentNucleotide))
             {
@@ -57,9 +55,7 @@ public final class NucleotideFragmentQualEnrichment
         }
 
         if(allPresent)
-        {
             return fragment;
-        }
 
         Fragment newFragment = new Fragment(
                 fragment.reads().get(0), fragment.readGene(), fragment.genes(), filteredNucleotides);
